Disable MD036 warning.

--- a/man/bashembler.1
+++ b/man/bashembler.1
@@ -11,9 +11,8 @@ file.
 \f[B]bashembler\f[R] [\f[I]OPTION\f[R]\&...] \f[I]SHELL_SCRIPT_FILE\f[R]
 > \f[I]OUTPUT_FILE\f[R]
 .PP
-\f[B]bashembler\f[R] [\f[I]OPTION\f[R]\&...] [ \f[B]-o\f[R]
-\f[I]OUTPUT_FILE\f[R] | \f[B]\[en]output=\f[R]\f[I]OUTPUT_FILE\f[R] ]
-\f[I]SHELL_SCRIPT_FILE\f[R]
+\f[B]bashembler\f[R] [\f[I]OPTION\f[R]\&...] [\f[B]-w\f[R]]
+[\f[B]-o\f[R] \f[I]OUTPUT_FILE\f[R]] \f[I]SHELL_SCRIPT_FILE\f[R]
 .SH DESCRIPTION
 .PP
 bashembler, contraction for bash-assembler build one-file bash script by
